--- a/.github/workflows/DsPipline.yml
+++ b/.github/workflows/DsPipline.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.SECRET_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
